--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'fatjar'
 
 repositories {
     mavenCentral()
+	maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 }
 
 buildscript {
@@ -17,7 +18,7 @@ buildscript {
 }
 
 dependencies {
-	compile 'com.yammer.dropwizard:dropwizard-core:0.6.1'
+	compile 'io.dropwizard:dropwizard-core:0.7.0-SNAPSHOT'
 
 	testCompile "junit:junit-dep:4.10"
 }
